src/ty/snapshots/tvm__ty__tests__bad_return.snap
---
source: src/ty/tests.rs
expression: "check!(r#\"\n        fn f() {\n            return 10\n        }\n    \"#)"
---
error: type mismatch between "int" and "()"
2 |      return 10
  |             ^^


